--- a/settings.json
+++ b/settings.json
@@ -7,8 +7,9 @@
 // custom settings, run the `open default settings` command
 // from the command palette or from `Zed` application menu.
 {
+  "theme": "Rosé Pine Moon",
   "ui_font_size": 16,
-  "buffer_font_size": 16,
+  "buffer_font_size": 18,
   "vim_mode": true,
   "relative_line_numbers": true,
   "use_autoclose": false
